alter models and pagination